# configory

./: Cargo.toml  README.md
.github/workflows/: ci.yml
configory_derive/: Cargo.toml
configory_derive/src/: docgen.rs  lib.rs
configory_derive/tests/: docgen.rs
examples/: client.rs  server.rs
src/: ipc.rs  lib.rs  monitor.rs
src/docgen/: markdown.rs  mod.rs
