[package]
name = "configory"
version = "0.2.0"
description = "Batteries included application config management"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/chrisduerr/configory"
rust-version = "1.85.0"
license = "GPL-3.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
notify = "8.0.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.22"

[dev-dependencies]
ctrlc = "3.4.7"
tempfile = "3.20.0"
