[package]
name = "configory"
version = "0.3.0"
description = "Batteries included application config management"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/chrisduerr/configory"
rust-version = "1.85.0"
license = "GPL-3.0"
edition = "2024"

[features]
log = ["dep:log"]

[dependencies]
dirs = "6.0.0"
log = { version = "0.4.27", optional = true }
notify = "8.0.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.22"

[dev-dependencies]
signal-hook = "0.3.18"
tempfile = "3.20.0"
