[package]
name = "configory_derive"
version = "0.1.0"
description = "Derive macros for the configory crate"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/chrisduerr/configory"
rust-version = "1.85.0"
license = "GPL-3.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["derive", "parsing", "proc-macro", "printing"], default-features = false }

[dev-dependencies]
configory = { version = "0.5.0", path = "../", features = ["docgen"] }
